# Data-Science-and-Statistics

./: .gitignore  CLT.ipynb  Confidence intervals.ipynb  Distributions.ipynb  Dockerfile  PCA.ipynb  README.md  Sampling distribution of Pearson correlation and the Fisher Transform.ipynb  Uber Analysis.ipynb  Wilcoxon Rank Sum.ipynb  covariance and correlation matrix.ipynb  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build-env.yaml  docker-build.yml  docker-image.yml  docker-push.yml
app/: Welcome.py
app/.streamlit/: config.toml
app/backend/: clt.py  cov.py  dist.py
app/pages/: 1_Common_Distributions.py  3_Covariance_and_Correlation.py  Central_Limit_Theorem.py  Common_Distributions.py  Covariance_and_Correlation.py
app/utils/: clt.py
data/: apples.csv  mean_diff_dependent.csv  salaries.csv  salaries_popvar_unknown.csv
notebooks/: CLT.ipynb  Confidence intervals.ipynb  Distributions.ipynb  PCA.ipynb  Sampling distribution of Pearson correlation and the Fisher Transform.ipynb  Uber Analysis.ipynb  Wilcoxon Rank Sum.ipynb  covariance and correlation matrix.ipynb
streamlit_app/: Welcome.py  __init__.py  requirements.txt
streamlit_app/pages/: Central_Limit_Theorem.py  Covariance_and_Correlation.py  __init__.py
