[project]
name = "data-science-and-statistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbdime>=4.0.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]
